# Elektron_Escort

./: .gitignore  CMakeLists.txt  escort.launch  escort_full.launch  package.xml
msg/: methods.msg  steering.msg
src/: Common.h  DataStorage.cpp  DataStorage.h  DefaultValues.h  IdentificationModule.cpp  IdentificationModule.h  MobilityModule.cpp  MobilityModule.h  SensorsModule.cpp  SensorsModule.h  TaskModule.cpp  TaskModule.h  escort_main.cpp
src/Backup/: CMakeLists.txt  functions.cpp  person_identification.cpp  skeleton_transforms.cpp
src/Modules/: DataStorage.cpp  DataStorage.h  IdentificationModule.cpp  IdentificationModule.h  IdentificationModule.h~  MobilityModule.cpp  MobilityModule.h  SensorsModule.cpp  SensorsModule.h  TaskModule.cpp  TaskModule.h
src/Modules/IdentificationMethods/: Height_Method.cpp  Height_Method.h  Height_Method_Calib.cpp  Height_Method_Calib.h  IdentificationMethod.h  Identification_Method.cpp  Identification_Method.h  UserID_Method.cpp  UserID_Method.h
